# Dino-Detect-for-blur-robust-AIGC-Detection

./: .gitignore  1027_train_nofocal.py  README.md  test.py  train.py  train.sh  train_gaussian.py  train_motion.py
0125_compensation/: test.sh  (+7 more)
github_release/: README_zh.md  pyproject.toml  test.py  train.py
github_release/__pycache__/: test.cpython-312.pyc.1784670190544  train.cpython-312.pyc.1784670190544
github_release/configs/: eval_example.json  train_example.json
github_release/docs/: DATA_LAYOUT.md  PROJECT_STRUCTURE.md
github_release/scripts/: eval.sh  train.sh
github_release/src/dino_detect/: __init__.py  config.py
github_release/src/dino_detect/__pycache__/: __init__.cpython-312.pyc.1784670003344  config.cpython-312.pyc.1784670003344
github_release/src/dino_detect/data/: __init__.py  blur.py  datasets.py  transforms.py
github_release/src/dino_detect/data/__pycache__/: __init__.cpython-312.pyc.1784670582960  blur.cpython-312.pyc.1784670007824  datasets.cpython-312.pyc.1784670574768  transforms.cpython-312.pyc.1784670574768
github_release/src/dino_detect/evaluation/: __init__.py  evaluator.py
github_release/src/dino_detect/evaluation/__pycache__/: __init__.cpython-312.pyc.1784670574768  evaluator.cpython-312.pyc.1784670574768
github_release/src/dino_detect/models/: __init__.py  network.py
github_release/src/dino_detect/models/__pycache__/: __init__.cpython-312.pyc.1784670105648  (+1 more)
github_release/src/dino_detect/training/: losses.py  trainer.py
github_release/src/dino_detect/utils/: __init__.py  checkpoint.py  distributed.py  misc.py
(+139 files in other folders)
